apps/vikunja/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vikunja
  namespace: vikunja
spec:
  selector:
    app: vikunja
  ports:
    - port: 80
      targetPort: 3456
  type: ClusterIP
